--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ appdirs==1.4.3
 cycler==0.10.0
 funcsigs==1.0.2
 functools32==3.2.3.post2
+h5py==2.7.0
 Keras==2.0.3
 Lasagne==0.1
 matplotlib==2.0.0
@@ -22,5 +23,5 @@ six==1.10.0
 sklearn==0.0
 statsmodels==0.8.0
 subprocess32==3.2.7
-tensorflow==1.0.1
 Theano==0.9.0
+wheel==0.24.0
